[gd_scene load_steps=4 format=3 uid="uid://ducsscxqgb6ej"]

[ext_resource type="Script" uid="uid://bjq6xv8gl1y5f" path="res://scenes/main/main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://j3dtttfn6lo8" path="res://scenes/ui/explore_ui.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://c0jiye2k7bjui" path="res://scenes/ui/inventory.tscn" id="3_h2yge"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00185, 1)
script = ExtResource("1_h2yge")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.0
offset_top = -302.0
offset_right = 413.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0004, 1)
alignment = 1

[node name="TopLayer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StoryLog" type="RichTextLabel" parent="VBoxContainer/TopLayer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true

[node name="StoryImage" type="TextureRect" parent="VBoxContainer/TopLayer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_vertical = 0
expand_mode = 3
stretch_mode = 5

[node name="BottomUI" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_stretch_ratio = 2.0

[node name="ExploreUI" parent="VBoxContainer/BottomUI" instance=ExtResource("2_h2yge")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory" parent="VBoxContainer/BottomUI" instance=ExtResource("3_h2yge")]
layout_mode = 2

[node name="FireTimer" type="Timer" parent="VBoxContainer"]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="VBoxContainer/FireTimer" to="." method="_on_fire_timer_timeout"]
